tests/baselines/reference/typeFromPropertyAssignment17(strict=true).errors.txt
minimatch.js(10,24): error TS7006: Parameter 'def' implicitly has an 'any' type.


==== use.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    var mini = require('./minimatch')
    mini.M.defaults()
    var m = new mini.M()
    m.m()
    mini.filter()
    
==== types.d.ts (0 errors) ====
    declare var require: any;
    declare var module: any;
==== minimatch.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    module.exports = minimatch
    minimatch.M = M
    minimatch.filter = filter
    function filter() {
        return minimatch()
    }
    function minimatch() {
    }
    M.defaults = function (def) {
                           ~~~
!!! error TS7006: Parameter 'def' implicitly has an 'any' type.
        return def
    }
    M.prototype.m = function () {
    }
    function M() {
    }
    